# Visio_Memoria

./: .gitignore  CLAUDE.md  README.md  main.py  pipeline.py  pipelinev1.py  pyproject.toml
notes/: 01_pipeline_call_graph.md  03_face_database_faiss_notes.md  04_face_database_call_graph.md  05_deployment_ui_notes.md  06_arcface_finetune_notes.md  07_arcface_finetune_guide.md  face_database_faiss_notes.md  face_embedder_notes.md
src/visio_memoria/db_paths/: faiss_mapping.json
src/visio_memoria/models/: FaceEmbedder.py  face_database_faiss.py
src/visio_memoria/utils/: dinov3_test.py  dinov3_test_old.py  system_specs_reader.py  temp.py  yolov8_face_test.py
